<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PwdKeyboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ebpay_bd_wallet">我的钱袋</string>
    <string name="ebpay_wallet_banlance_tip">%1$s 需支付%2$s元，余额支付%3$s元，还需支付%4$s元</string>
    <string name="ebpay_wallet_banlance">钱包余额付款</string>
    <string name="ebpay_pwd_forget">忘记密码？</string>
    <string name="ebpay_submit_pay">确认支付</string>

</resources>
