<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ebpay_translucence_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/ebpay_title_heigth"
            android:background="@color/ebpay_title_bg" >

            <TextView
                android:id="@+id/ebpay_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ebpay_bd_wallet"
                android:textColor="@color/ebpay_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ebpay_bt_close_selector" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/inner_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/ebpay_white"
                android:orientation="vertical"
                android:paddingBottom="10.0dip" >

                <RelativeLayout
                    android:id="@+id/bank_bg_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ebpay_window_bg" >

                    <ImageView
                        android:id="@+id/pwd_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ebpay_password_bg" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/pay_balance_amount_tip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:gravity="center"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10.0dip"
                    android:text="@string/ebpay_wallet_banlance_tip"
                    android:textColor="@color/ebpay_text_black1"
                    android:textSize="14.0sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/pay_amount_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pay_balance_amount_tip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="14.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/pay_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100元"
                        android:textColor="@color/ebpay_text_black1"
                        android:textSize="18.0sp" />

                    <TextView
                        android:id="@+id/goods_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6.0dip"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@color/ebpay_text_black1"
                        android:textSize="18.0sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/pay_amount_tip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pay_amount_layout"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:text="@string/ebpay_wallet_banlance"
                    android:textColor="@color/ebpay_text_black1"
                    android:textSize="16.0sp"
                    android:visibility="gone" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2.0dip"
                    android:layout_below="@id/bank_bg_layout"
                    android:background="@drawable/ebpay_order_bottom_line" />

                <com.cyq.pay.SixPwd
                    android:id="@+id/pwdInputBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bank_bg_layout"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="12.0dip" />

                <RelativeLayout
                    android:id="@+id/error_area"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pwdInputBox"
                    android:layout_marginTop="10.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/forget_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/ebpay_pwd_forget"
                        android:textColor="@color/ebpay_click_text_color" />

                    <TextView
                        android:id="@+id/error_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_toLeftOf="@id/forget_pwd"
                        android:textColor="@color/ebpay_red"
                        android:visibility="gone" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_pay"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/ebpay_white_line_height"
                    android:layout_below="@id/error_area"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/ebpay_bg_confrim_selector"
                    android:text="@string/ebpay_submit_pay"
                    android:textColor="@color/ebpay_white"
                    android:textSize="18.0sp" />


            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>